# TestTask

./: CMakeLists.txt  TestTask.pro  image.cpp  image.h  main.cpp  outImg.yuv
CMake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main
CMake tmp/: main
CMake/test/: Makefile  cmake_install.cmake  tests
multiThreading/: CMakeLists.txt  main.cpp
singleThread/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
